--- a/templates/appointment/downloadappointment.html
+++ b/templates/appointment/downloadappointment.html
@@ -1,135 +1,41 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="download.css">
+    <link rel="stylesheet" href="{% static 'css/download.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Crimson+Text&display=swap" rel="stylesheet">
     <title>Download Appointment</title>
 </head>
 <body>
- <!-- It includes only Head part -->
-  <section class="home" id="home">
-    <header class="header">
-        <div class="head-text">
-            <h1 class="name">SPARSH </h1>
-            <p class="slogan"> स्वास्थ्य की ओर पहला कदम, हर अपॉइंटमेंट एक स्पर्श           
-         </p>
-        </div>
-        
-        <div class="icons">
-           <a href="#"></a> <i class="fa-brands fa-facebook-f"></i>
-           <a href="#"></a> <i class="fa-brands fa-instagram"></i>
-           <a href="#"></a> <i class="fa-brands fa-twitter"></i>
-            <a class="skip-content">&ensp;Skip Content</a>
-        </div>
-    
-    </header>
-  </section>
 
-    
-   
-
- <!-- It includes the navbar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="home.html">Home</a></li> <!-- Home without dropdown -->
-            
-            <li class="dropdown"> 
-                <a href="#">About Us</a>
-                <ul class="dropdown-content">
-                    <li><a href="aboutus.html"> <i class="fa-solid fa-eye"></i>&ensp;About Sparsh</a></li>
-                    <li><a href="help.html"><i class="fa-solid fa-circle-question"></i></i>&ensp;Help</a></li>
-                </ul>
-            </li>
-            
-            <li class="dropdown">
-                <a href="#">Services</a>
-                <ul class="dropdown-content">
-                    <li><a href="bookappointment.html"><i class="fa-solid fa-calendar-day"></i>&ensp;Book Appointment</a></li>
-                    <li><a href="downloadappoitment.html"><i class="fa-solid fa-download"></i>&ensp;Download Appointment</a></li>
-                    <li><a href="#"><i class="fa-solid fa-location-dot"></i>&ensp;Locate Appointment</a></li>
-                    <li><a href=""><i class="fa-solid fa-fingerprint"></i>&ensp;Create ABHA Card</a></li>
-                </ul>
-            </li>
-            
-            <li class="dropdown">
-                <a href="#">Profiles</a>
-                <ul class="dropdown-content">
-                    <li><a href="userregistration.html"><i class="fa-solid fa-users-line"></i>&ensp;User Registration</a></li>
-                    <li><a href="user.html"><i class="fa-solid fa-users-line"></i>&ensp;User Login</a></li>
-                    <li><a href="doctorregistration.html"><i class="fa-solid fa-user-doctor"></i>&ensp;Doctor Registration</a></li>
-                    <li><a href="doctorlogin.html"><i class="fa-solid fa-user-doctor"></i>&ensp;Doctor Login</a></li>
-                    <li><a href="regional.html"><i class="fa-solid fa-globe"></i>&ensp;Regional/Area Login</a></li>
-                </ul>
-            </li>
-            
-            <li class="dropdown">
-                <a href="#">Verification</a>
-                <ul class="dropdown-content">
-                    <li><a href="#"><i class="fa-regular fa-circle-check"></i>&ensp;Verify Aadhar Number </a></li>
-                    <li><a href="#"><i class="fa-regular fa-circle-check"></i>&ensp;Verify Phone Number/Email Address</a></li>
-                    <li><a href="#"><i class="fa-regular fa-circle-check"></i>&ensp;Change Phone Number/Email Address</a></li>
-                </ul>
-            </li>
-            
-            <li class="dropdown">
-                <a href="#">Download</a>
-                <ul class="dropdown-content">
-                    <li><a href="print.html"><i class="fa-solid fa-download"></i>&ensp;Print Application</a></li>
-                    <li><a href="#"><i class="fa-solid fa-download"></i>&ensp;Print Payment Receipt</a></li>
-                    <li><a href="#"><i class="fa-solid fa-print"></i>&ensp;Printing Machine</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="contactus.html">Contact Us</a>
-            </li>
-        
-        </ul>
-    </nav>
-
+    {% include 'base/nav.html' %}
 
     <div class="welcome">
         <div class="line"></div>
         <h1 class="wlcm-txt">Download Appointment</h1>
         <div class="line"></div>
        </div>
-    
-       <div class="appointment-box">
+        
+       <form action="" method="POST">
+        {% csrf_token %}
+         <div class="appointment-box">
+        
         <div class="input-row">
             <label for="appointment-number"> Appointment Number:</label>
-            <input type="text" id="appointment-number" placeholder="Enter the appointment number" required>
+            <input type="text" id="appointment-number" name="unique_id" placeholder="Enter the appointment number" required>
         </div>
         <button type="submit">Submit</button>
-        <a href="#" class="book-appointment">Book an Appointment?</a>
+        <a href="{% url 'appointment' %}" class="book-appointment">Book an Appointment?</a> 
+
+       </form>        
     </div>
+
+      
     
 
 
-    <!-- It includes the footer part -->
-
-<footer class="footer-container">
-    <div class="left-section">
-        <ul>
-            <li>Privacy Policy</li>
-            <li>Non-Discrimination Policy</li>
-            <li>Terms of Use</li>
-            <li>Patient Rights and Responsibilities</li>
-        </ul>
-    </div>
-    <div class="center-section">
-        <p><span>Contact no :</span> 1234567890</p>
-        <p><span>Email id :</span> sparsh.healthservice@gmail.com</p>
-        <p><span>Address :</span> abcdefghijkl,mnopq</p>
-    </div>
-    <div class="right-section">
-        <p>Follow Us On</p>
-        <div class="footer-social-icons">
-            <a href="#"></a> <i class="fa-brands fa-facebook-f"></i>
-            <a href="#"></a> <i class="fa-brands fa-instagram"></i>
-            <a href="#"></a> <i class="fa-brands fa-twitter"></i>
-        </div>
-    </div>
-</footer>
-
+</body>
+</html>
