--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -119,7 +119,7 @@
                 <div class="icon">
                     <img class="icon-img" src="https://img.icons8.com/ios-filled/50/000000/calendar--v1.png"/>
                 </div>
-            <a href="{% url 'appointment' %} "><button class="btn">Make a Appointment</button></a>
+            <a href="{% url 'ulogin' %} "><button class="btn">Make a Appointment</button></a>
                 <p class="card-txt">You can make the appointment with doctor<br>
                 according to your day, date, time.</p>
             </div>
