--- a/static/css/contactus.css
+++ b/static/css/contactus.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-
+ 
 body{
 overflow-x: hidden;
 
@@ -88,7 +88,7 @@ background: linear-gradient(to bottom, #00c6ff, #0072ff);
   justify-items: center;
   justify-content: space-evenly;
   margin-bottom: 1rem;
-  font-size: 2rem;
+/*  font-size: 2rem;*/
   margin-right: 1rem;
 }
 
@@ -186,49 +186,3 @@ button:hover {
 .line-with-dots::after {
   right: -10px; /* Position the right dot */
 }
-
-/* It includes the css of footer */
-
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 50px; background: linear-gradient(90deg, #1597E0 0%, #5AAEDE 32%, #A7C3D3 53%, #5EAFDE 74%, #1597E0 100%);
-  border-top: 1px solid black;
-}
-
-.left-section ul {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
-.left-section li {
-  margin-bottom: 10px;
-  font-size: 1.1rem;
-  color: #000;
-}
-
-.center-section p {
-  
-  font-size: 1.1rem;
-  margin-bottom: 10px;
-  color: #000;
-}
-.center-section span{
-  font-weight: bold;
-  color: #3d3d7a;
-}
-
-.right-section p {
-  font-size: 1.31rem;
-  color: #5a5151;
-  margin-bottom: 10px;
-  margin-left: 0.5rem;
-}
-
-.footer-social-icons i {
-  width: 30px;
-  height: 30px;
-  margin-left: 10px;
-}
-
