--- a/templates/login/doctorlogin.html
+++ b/templates/login/doctorlogin.html
@@ -38,9 +38,9 @@
                     
                     <button type="submit">Sign In</button>
                     
-                    <div class="login-options">
+<!--                     <div class="login-options">
                         <a href="#">Forgot Password</a>
-                    </div>
+                    </div> -->
                 </form>
             </div>
             <div class="login-right">
