--- a/templates/appointment/bookappointment.html
+++ b/templates/appointment/bookappointment.html
@@ -19,7 +19,7 @@
         <div class="line"></div>
        </div>
 
-            <div id="stepsModal" style="display: none;
+           <div id="stepsModal" style="display: none;
             position: fixed;
             z-index: 1000;
             left: 0;
@@ -58,7 +58,7 @@
                     border: none;
                     cursor: pointer;">Got it!</button>
                 </div>
-            </div>
+            </div> 
             
             <script>
                 // // Function to check if the popup has been shown before
@@ -79,20 +79,21 @@
                 //     showPopupOnce();
                 // }
 
-                
-                function showPopup() {
-                    document.getElementById("stepsModal").style.display = "block";
-                }
+                // --------------------------------------
 
-                // Function to close the modal
-                function closeModal() {
-                    document.getElementById("stepsModal").style.display = "none";
-                }
+                // function showPopup() {
+                //     document.getElementById("stepsModal").style.display = "block";
+                // }
 
-                // Show the popup every time the page loads
-                window.onload = function() {
-                    showPopup();
-                }
+                // // Function to close the modal
+                // function closeModal() {
+                //     document.getElementById("stepsModal").style.display = "none";
+                // }
+
+                // // Show the popup every time the page loads
+                // window.onload = function() {
+                //     showPopup();
+                // }
 
             </script>
     </div>
@@ -251,7 +252,10 @@
                     }
                 }
             }
-        </script>
+        </script> 
+
+
+
 
    {% include 'base/footer.html' %}
 
