--- a/templates/profile/duprofile.html
+++ b/templates/profile/duprofile.html
@@ -85,9 +85,9 @@
         {{ form.opd_type.errors }}
         {{ form.opd_type }}
     </div>
-
+ 
     <div>
-        <label for="id_area_profile">opd type:</label>
+        <label for="id_area_profile">district:</label>
         {{ form.district.errors }}
         {{ form.district }}
     </div>
