--- a/templates/dashboard/rdashboard.html
+++ b/templates/dashboard/rdashboard.html
@@ -19,6 +19,7 @@
             <tr>
                 <th>Name</th>
                 <th>Email</th>
+                <th>Hospital</th>
                 <th>Registration Date</th>
                 <th>Profile</th>
             </tr>
@@ -28,6 +29,7 @@
                 <tr>
                     <td>{{ patient.uname }}</td>
                     <td>{{ patient.uemail }}</td>
+                    <td>{{ patient.area_profile.uname }}</td>
                     <td>{{ patient.created }}</td>
                     <td><a href="{% url 'rpatient_profile' patient.id %}">View Profile</a></td>
                 </tr>
@@ -41,6 +43,8 @@
             <tr>
                 <th>Name</th>
                 <th>Email</th>
+                <th>Opd Type</th>
+                <th>Hospital</th>
                 <th>Registration Date</th>
                 <th>Profile</th>
             </tr>
@@ -50,6 +54,8 @@
                 <tr>
                     <td>{{ doctor.uname }}</td>
                     <td>{{ doctor.uemail }}</td>
+                    <td>{{ doctor.opd_type.name }}</td>
+                    <td>{{ doctor.area_profile.uname }}</td>
                     <td>{{ doctor.created }}</td>
                     <td><a href="{% url 'rdoctor_profile' doctor.id %}">View Profile</a></td>
                 </tr>
